tests/call_expr.err.out
error: call_expr.err.li 5,1: function `unknown_fn` is not defined
    5 | unknown_fn()
      | ^^^^^^^^^^^^
error: call_expr.err.li 8,1: `v` is not function (`int`)
    8 | v()
      | ^^^
error: call_expr.err.li 11,3: mismatched types: `int` (expected) and `string` (found)
   11 | f("a")
      |   ^^^
error: call_expr.err.li 12,1: expected 1 arguments, but got 0
   12 | f()
      | ^^^
error: call_expr.err.li 13,1: expected 1 arguments, but got 2
   13 | f(0, 1)
      | ^^^^^^^
error: call_expr.err.li 16,1: expected least 2 arguments, but got 1
   16 | f_opt(0)
      | ^^^^^^^^
error: call_expr.err.li 17,13: mismatched types: `int` (expected) and `string` (found)
   17 | f_opt(0, 0, 'c')
      |             ^^^
error: call_expr.err.li 18,1: expected 4 arguments, but got 5
   18 | f_opt(0, 0, 0, 0, 0)
      | ^^^^^^^^^^^^^^^^^^^^
